--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eDrive Bicycle - Cửa hàng xe đạp</title>
+    <title>eDrive Bicycle - xe đạp thông minh đô thị</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
         <!-- Tiêu đề trang -->
-        <h1>Cửa hàng xe đạp thông minh đô thị</h1>
+        <h1>Xe đạp thông minh đô thị</h1>
 
         <!-- Thông tin sản phẩm -->
         <div class="product-card">
